Added disabled css class and js script to block disabled feature from user interactions

--- a/ezoterikus-client/index.html
+++ b/ezoterikus-client/index.html
@@ -95,6 +95,7 @@
   <div id="friendPopover" class="popover" style="display:none;"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/argon2-browser/dist/argon2-bundled.min.js"></script>
+  <script src="./js/prod_disabled.js"></script>
   <script type="module" src="./js/main.js"></script>
 </body>
 </html>
