Started implementation, DR code should be decent, need to bulde libsignal

--- a/ezoterikus-client/index.html
+++ b/ezoterikus-client/index.html
@@ -94,8 +94,9 @@
 
   <div id="friendPopover" class="popover" style="display:none;"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/argon2-browser/dist/argon2-bundled.min.js"></script>
-  <script src="./js/prod_disabled.js"></script>
-  <script type="module" src="./js/main.js"></script>
-</body>
-</html>
+    <script src="./node_modules/argon2-browser/dist/argon2-bundled.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@ajayos/libsignal@2.0.3/index.min.js"></script>
+    <script src="./js/prod_disabled.js"></script>
+    <script type="module" src="./js/main.js"></script>
+  </body>
+  </html>
