--- a/ezoterikus-client/index.html
+++ b/ezoterikus-client/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Ezoterikus Ultra-Light</title>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
